syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.scavo.http";

package akka2grpcexample;

message MessageRequestExample {
  string id = 1;
  string message = 2;
  optional google.protobuf.Timestamp timestamp = 3;
  repeated string extra_info = 4;
}

message MessageResponseExample {
  string id = 1;
  string response_message = 2;
  optional google.protobuf.Timestamp timestamp = 3;
  repeated string extra_info = 4;
}

service MessageExchangeServiceExample {

  rpc SendMessage(MessageRequestExample) returns (MessageResponseExample) {}

  rpc StreamMessagesSingleResponse(stream MessageRequestExample) returns (MessageResponseExample) {}

  rpc SendMessageStreamResponse(MessageRequestExample) returns (stream MessageResponseExample) {}

  rpc StreamMessages(stream MessageRequestExample) returns (stream MessageResponseExample) {}
}